# semantic-search-kd

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.md  architecture.md  docker-compose.yml  pyproject.toml  test_training_gradients.py
.github/workflows/: ci.yml  ml-pipeline.yml
configs/: index.yaml  kd.yaml  service.yaml
docs/architecture/: c4-code-losses.md  c4-component-serving.md  c4-component-training.md  c4-container.md  c4-context.md
docs/decisions/: adr-001-student-model-choice.md  adr-002-teacher-model-choice.md  adr-003-three-stage-mining.md  adr-004-multi-loss-combination.md  adr-005-temperature-annealing.md  adr-006-faiss-hnsw-over-ivfpq.md  adr-007-pytorch-over-onnx-serving.md  adr-008-token-bucket-rate-limiting.md  adr-template.md
docs/guides/: custom-dataset-guide.md  deployment-guide.md  hyperparameter-tuning.md  quickstart.md  training-guide.md
docs/operations/: monitoring-and-alerting.md  runbook.md  scaling-and-performance.md
docs/overview/: problem-and-approach.md  results-and-benchmarks.md
docs/reference/: api-reference.md  cli-and-makefile.md  configuration-reference.md  environment-variables.md
infra/: Dockerfile.train  vertex_training_job.yaml
notebooks/: train_on_colab.ipynb
scripts/: _validate_args.py  build_faiss_index.py  deploy.sh  entrypoint.sh  evaluate_and_compare.py  evaluate_production.py  export_to_onnx.py  manage_api_keys.py  model_registry.py  quick_demo.sh  quick_training_demo.sh  request_gpu_quota.sh  run_complete_pipeline.sh  run_demo_pipeline.sh  run_full_training.sh  run_production_training_local.sh  run_training_gcp_cpu.sh  run_training_on_gcp_vm.sh  run_training_us_east5.sh  run_vertex_ai_training.sh  setup_gcp.sh  simple_eval.py  start_service.py  test_service.py  train_kd_pipeline.py  try_all_zones.sh  upload_code_to_gcs.sh
src/: config.py  exceptions.py
src/data/: bm25.py  fetch.py  integrity.py  prepare.py  registry.py
src/kd/: eval.py  losses.py  train.py
src/mining/: miners.py
src/serve/: app.py  middleware.py  schemas.py
src/utils/: chunk.py  logging.py  metrics.py  seed.py
tests/: __init__.py  conftest.py  test_api.py  test_bm25.py  test_config.py  test_hardening.py  test_losses.py  test_mining.py  test_model_validation.py  test_student_model.py
