[tool.poetry]
name = "semantic-kd"
version = "0.1.0"
description = "Production-grade Cross-Encoder → Bi-Encoder Knowledge Distillation for Semantic Search"
authors = ["Your Team <team@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.0"
transformers = "^4.35.0"
sentence-transformers = "^2.2.2"
datasets = "^2.14.0"
faiss-cpu = "^1.7.4"
onnx = "^1.15.0"
onnxruntime = "^1.16.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
# pyserini = "^0.22.0"  # Skipping due to nmslib dependency issues on ARM Mac
# beir = "^2.0.0"  # Skipping due to nmslib compilation issues on ARM Mac
rank-bm25 = "^0.2.2"  # Lightweight BM25 implementation
pyarrow = "^14.0.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.0"
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
typer = {extras = ["all"], version = "^0.9.0"}
pyyaml = "^6.0"
python-dotenv = "^1.0.0"
httpx = "^0.25.0"
tenacity = "^8.2.0"
loguru = "^0.7.0"
tqdm = "^4.66.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.18.0"
mkdocs-material = "^9.4.0"
mkdocs-mermaid2-plugin = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.12.0"
black = "^23.11.0"
ruff = "^0.1.5"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
ipykernel = "^6.26.0"
jupyter = "^1.0.0"
nbformat = "^5.9.0"

[tool.poetry.scripts]
semantic-kd = "src.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pyserini.*",
    "beir.*",
    "faiss.*",
    "sentence_transformers.*",
    "onnxruntime.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html --cov-fail-under=75"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

